# FactorioClasses

./: .gitignore  CMakeLists.txt  README.md  building.cpp  building.hpp  entity.hpp  factory.cpp  factory.h  factory.hpp  fluid.hpp  inserter.cpp  inserter.hpp  interactioninterfaces.cpp  interactioninterfaces.hpp  json_communicate.cpp  json_communicate.h  json_communicate.hpp  jsoncommunicate.cpp  jsoncommunicate.hpp  laboratory.hpp  main.cpp  material.cpp  material.hpp  npc.hpp  object.cpp  object.hpp  objectparametrshandler.hpp  ores.cpp  ores.hpp  pipeline.hpp  plant.hpp  player.hpp  services.cpp  services.h  services.hpp  sessionlogic.hpp  turret.hpp  window.cpp  window.hpp
.github/workflows/: c-cpp.yml
include/SFML/System/: Angle.hpp  Angle.inl
resources/config/: items.json
resources/config/items/Air/: README.txt  help.json  main.json  production.json
resources/config/items/Chest/: main.json  production.json
resources/config/items/Coal/: main.json
resources/config/items/Conveyor/: main.json  production.json
resources/config/items/Fabricator/: main.json  production.json
resources/config/items/Inserter/: main.json
resources/config/items/Iron/: main.json
resources/config/items/Iron_Ore/: main.json
resources/config/items/Iron_Plate/: main.json
resources/config/items/Iron_Shaft/: main.json
resources/config/items/Miner/: main.json  production.json
resources/config/items/Pig_Iron/: main.json
resources/config/items/StandarInserter/: main.json
resources/config/items/StandartChest/: main.json
resources/config/items/StandartConveyer/: main.json
resources/config/items/Standarthand/: main.json
src/: CMakeLists.txt  README.md  building.cpp  building.hpp  conveyer.cpp  conveyer.hpp  factory.cpp  factory.hpp  inserter.cpp  inserter.hpp  interactioninterfaces.cpp  interactioninterfaces.hpp  jsoncommunicate.cpp  jsoncommunicate.hpp  main.cpp  material.cpp  material.hpp  object.cpp  object.hpp  objectparametrshandler.hpp  sessionlogic.cpp  sessionlogic.hpp  testl.cpp  testld.cpp  window.cpp  window.hpp
